--- a/recommendation.html
+++ b/recommendation.html
@@ -10,8 +10,12 @@
   <div class="container">
     <h1>Recommended Places</h1>
     <ul id="places-list"></ul>
-    <button id="logout-btn">Logout</button>
   </div>
+
+  <!-- Logout Button -->
+  <button id="logout-btn" class="logout-btn">Logout</button>
+
+  <!-- Chatbot -->
   <div id="chatbot">
     <div id="chatbot-header">Chatbot</div>
     <div id="chatbot-messages"></div>
@@ -20,7 +24,15 @@
       <button id="send-btn">Send</button>
     </div>
   </div>
+
   <script src="recommendation_algorithm.js"></script>
   <script src="chatbot.js"></script>
+  <script>
+    // Logout button functionality
+    document.getElementById('logout-btn').addEventListener('click', function () {
+      sessionStorage.removeItem('loggedInUser'); // Clear session
+      window.location.href = 'index.html'; // Redirect to login page
+    });
+  </script>
 </body>
 </html>
