--- a/recommendation.html
+++ b/recommendation.html
@@ -8,14 +8,14 @@
 </head>
 <body>
   <div class="container">
+    <!-- Logout Button in the Top Right -->
+    <button id="logout-btn" class="logout-btn">Logout</button>
+
     <h1>Recommended Places</h1>
     <ul id="places-list"></ul>
   </div>
 
-  <!-- Logout Button -->
-  <button id="logout-btn" class="logout-btn">Logout</button>
-
-  <!-- Chatbot -->
+  <!-- Chatbot in the Middle Absolute at the Bottom -->
   <div id="chatbot">
     <div id="chatbot-header">Chatbot</div>
     <div id="chatbot-messages"></div>
