--- a/recommendation.html
+++ b/recommendation.html
@@ -13,17 +13,17 @@
     <button id="logout-btn" class="logout-btn">Logout</button>
   </div>
 
-  <!-- Chatbot -->
+  <!-- AI Assistant -->
   <div id="chatbot">
-    <div id="chatbot-header">Chatbot</div>
+    <div id="chatbot-header">AI Assistant</div>
     <div id="chatbot-messages"></div>
     <div id="chatbot-input">
-      <input type="text" id="chat-input" placeholder="Type a message...">
+      <input type="text" id="chat-input" placeholder="Type your query...">
       <button id="send-btn">Send</button>
     </div>
   </div>
 
   <script src="recommendation_algorithm.js"></script>
-  <script src="chatbot.js"></script>
+  <script src="ai_assistant.js"></script>
 </body>
 </html>
